fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ div#root {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 15px 27px;
+  padding: 10px 27px;
   height: 100%;
 }
 
